--- a/rAppla/res/values/ids.xml
+++ b/rAppla/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="dateButtonID" type="id" />
     <item name="timeButtonID" type="id" />
     <item name="activateButtonID" type="id" />
+    <item name="removeButtonID" type="id" />
 </resources>
